
              ppmtosixel: Add -7bit, so it works on more terminals, including
              xterms.  Thanks Scott Pakin.

              g3topbm: Add -correctlong

              build: Add COMPILED_BY environment variable to control the
              "compiled by" value from --version common option.  This helps
              with creating reproducible builds.

              pammixmulti: Remove disclaimer of patent license.

              pamstack: Fix bug: acts like -firstmaxval specified when it
              wasn't.  Introduced in Netpbm 11.03 (June 2023).

              pamstack: Fix -lcmmaxval: chooses wrong maxval.  Always
              broken (-lcmmaxval was new in Netpbm 11.03 (June 2023)).

              pamstack: Fail gracefully when total number of planes is too
              large for unsigned integer.  Always broken (Pamstack was new in
              Netpbm 10.0 (June 2002).

              ppmfade: fix "file not found" crash for most fade modes.
              Introduced in Netpbm 10.98 (March 2022).

              ppmfade: fix incorrect block mode fade.  Always broken
              (ppmfade was new in Netpbm 8.4 (April 2000)).

              pamaddnoise: fix very incorrect noise added for all types.
              Introduced in Netpbm 10.94 (March 2021).

              ppmrough: fix buffer overrun.  Always broken (Ppmrough was new
              in Netpbm 10.9 (September 2002).

              ppmrough: fix excessive roughness.  Introduced in Netpbm 10.94
              (March 2021).

              pgmtexture: Fix buffer overflow with maxval > 255.  Always
              broken.  Maxvals > 255 were possible starting in Netpbm 9.0
              (April 2000).

              pgmtexture: Fix bug: ignores -d.  Introduced in Netpbm 10.56
              (September 2011).

              pbmtopgm: Fix error message for excessive -width.

              library: add check of maxval for computable size.

              Build: Include LDFLAGS in link of shared library.
